[package]
name = "ironstream"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "^0.3.31"
serde_json = "^1.0.133"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
axum = { version = "^0.8.1", features = ["ws"] }
chrono = { version = "^0.4.39", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12.14", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
