[package]
name = "ironstream"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "^0.3.31", default-features = false, features = [
    "sink",
    "alloc",
] }
serde_json = "^1.0.133"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
] }
serde = { version = "1", features = ["derive", "rc"] }
axum = { version = "^0.8.1", features = ["ws", "http1", "json", "tokio"] }
chrono = { version = "^0.4.39", default-features = false, features = [
    "clock",
    "serde",
] }
reqwest = { version = "0.12.14", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tinyrand = "0.5.0"
tinyrand-std = "0.5.0"

[dev-dependencies]
mockito = "1.0"
tower-test = "0.4"
tokio-tungstenite = "0.18"
hyper = "0.14"
http-body = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
